# go-python-p

./: .gitignore  Makefile  README.md  go.mod  main.c  main.py  main_test.go  pyproject.toml  setup.py  shared.go
example/: .gitignore
