[project]
name = "hello"
version = ""
description = ""
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = [
    "Cython==0.29.28",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
